Removed unwanted files

--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
 
                             <div class="popular-menu__content text-center">
                                 <h2 class="title">
-                                    <a href="#">Thailand Ice-Cream</a>
+                                    Thailand Ice-Cream
                                 </h2>
 
                             </div>
@@ -502,7 +502,7 @@
 
                             <div class="popular-menu__content text-center">
                                 <h2 class="title">
-                                    <a href="#">Softy Ice-Cream</a>
+                                   Softy Ice-Cream
                                 </h2>
 
                             </div>
@@ -519,7 +519,7 @@
 
                             <div class="popular-menu__content text-center">
                                 <h2 class="title">
-                                    <a href="#">Fried Ice Cream</a>
+                                    Fried Ice Cream
                                 </h2>
 
                             </div>
@@ -536,7 +536,7 @@
 
                             <div class="popular-menu__content text-center">
                                 <h2 class="title">
-                                    <a href="#">Roller Ice-Cream</a>
+                                    Roller Ice-Cream
                                 </h2>
 
                             </div>
@@ -555,7 +555,7 @@
                             </div>
                             <div class="popular-menu__content text-center">
                                 <h2 class="title">
-                                    <a href="#">Pop Corn</a>
+                                    Pop Corn
                                 </h2>
                             </div>
                         </div>
@@ -572,7 +572,7 @@
 
                             <div class="popular-menu__content text-center">
                                 <h2 class="title">
-                                    <a href="#">Cotton Candy</a>
+                                    Cotton Candy
                                 </h2>
                             </div>
 
@@ -588,7 +588,7 @@
                             </div>
                             <div class="popular-menu__content text-center">
                                 <h2 class="title">
-                                    <a href="#">Chocolate Fountain</a>
+                                    Chocolate Fountain
                                 </h2>
                             </div>
                         </div>
@@ -606,7 +606,7 @@
                             </div>
                             <div class="popular-menu__content text-center">
                                 <h2 class="title">
-                                    <a href="#">Makaibari Tea</a>
+                                    Makaibari Tea
                                 </h2>
                             </div>
                         </div>
@@ -620,7 +620,7 @@
                             </div>
                             <div class="popular-menu__content text-center">
                                 <h2 class="title">
-                                    <a href="#">Golden Emperor</a>
+                                    Golden Emperor
                                 </h2>
                             </div>
                         </div>
@@ -633,7 +633,7 @@
                             </div>
                             <div class="popular-menu__content text-center">
                                 <h2 class="title">
-                                    <a href="#">Coconut Spicy</a>
+                                    Coconut Spicy
                                 </h2>
                             </div>
                         </div>
@@ -646,7 +646,7 @@
                             </div>
                             <div class="popular-menu__content text-center">
                                 <h2 class="title">
-                                    <a href="#">Kiwi Lemon Ginger</a>
+                                    Kiwi Lemon Ginger
                                 </h2>
                             </div>
                         </div>
@@ -659,7 +659,7 @@
                             </div>
                             <div class="popular-menu__content text-center">
                                 <h2 class="title">
-                                    <a href="#">Pepper Mint</a>
+                                    Pepper Mint
                                 </h2>
                             </div>
                         </div>
@@ -672,7 +672,7 @@
                             </div>
                             <div class="popular-menu__content text-center">
                                 <h2 class="title">
-                                    <a href="#">English Breakfast</a>
+                                    English Breakfast
                                 </h2>
                             </div>
                         </div>
@@ -685,7 +685,7 @@
                             </div>
                             <div class="popular-menu__content text-center">
                                 <h2 class="title">
-                                    <a href="#">Chocolate Mint</a>
+                                    Chocolate Mint
                                 </h2>
                             </div>
                         </div>
@@ -698,7 +698,7 @@
                             </div>
                             <div class="popular-menu__content text-center">
                                 <h2 class="title">
-                                    <a href="#">Lichi Peach</a>
+                                    Lichi Peach
                                 </h2>
                             </div>
                         </div>
@@ -711,7 +711,7 @@
                             </div>
                             <div class="popular-menu__content text-center">
                                 <h2 class="title">
-                                    <a href="#">Hibiscus Chammolie Rose</a>
+                                    Hibiscus Chammolie Rose
                                 </h2>
                             </div>
                         </div>
@@ -726,7 +726,7 @@
                             </div>
                             <div class="popular-menu__content text-center">
                                 <h2 class="title">
-                                    <a href="#">Chicken Nuggets</a>
+                                    Chicken Nuggets
                                 </h2>
                             </div>
                         </div>
@@ -739,7 +739,7 @@
                             </div>
                             <div class="popular-menu__content text-center">
                                 <h2 class="title">
-                                    <a href="#">French Fries</a>
+                                    French Fries
                                 </h2>
                             </div>
                         </div>
@@ -752,7 +752,7 @@
                             </div>
                             <div class="popular-menu__content text-center">
                                 <h2 class="title">
-                                    <a href="#">Patties</a>
+                                    Patties
                                 </h2>
                             </div>
                         </div>
@@ -765,7 +765,7 @@
                             </div>
                             <div class="popular-menu__content text-center">
                                 <h2 class="title">
-                                    <a href="#">Garlic Shots</a>
+                                    Garlic Shots
                                 </h2>
                             </div>
                         </div>
@@ -778,7 +778,7 @@
                             </div>
                             <div class="popular-menu__content text-center">
                                 <h2 class="title">
-                                    <a href="#">Cheese Shots</a>
+                                    Cheese Shots
                                 </h2>
                             </div>
                         </div>
@@ -793,7 +793,7 @@
                             </div>
                             <div class="popular-menu__content text-center">
                                 <h2 class="title">
-                                    <a href="#">Fresh Juices</a>
+                                    Fresh Juices
                                 </h2>
                             </div>
                         </div>
@@ -819,7 +819,7 @@
                             </div>
                             <div class="popular-menu__content text-center">
                                 <h2 class="title">
-                                    <a href="#">Mocktails</a>
+                                    Mocktails
                                 </h2>
                             </div>
                         </div>
@@ -832,7 +832,7 @@
                             </div>
                             <div class="popular-menu__content text-center">
                                 <h2 class="title">
-                                    <a href="#">Lassi</a>
+                                    Lassi
                                 </h2>
                             </div>
                         </div>
