--- a/contact.html
+++ b/contact.html
@@ -479,6 +479,9 @@
                 </div>
             </div>
         </div>
+        <div style="color: white;" class="copyright">
+            &copy; Copyright   <strong><span class="ms-2">Dessert Kart</span></strong>
+        </div>
     </footer>
 
     <!--========= JS Here =========-->
