--- a/about.html
+++ b/about.html
@@ -506,6 +506,9 @@
                 </div>
             </div>
         </div>
+        <div style="color: white;" class="copyright">
+            &copy; Copyright   <strong><span class="ms-2">Dessert Kart</span></strong>
+        </div>
     </footer>
 
     <!--========= JS Here =========-->
