File type changed

--- a/about.html
+++ b/about.html
@@ -318,7 +318,7 @@
                 <div class="row">
                     <div class="col-xl-5 col-lg-7">
                         <div class="about__left about__left--2 position-relative">
-                            <img class="big" style="max-width: 90%;" src="assets/images/about/Tea About/about-img-1.png"
+                            <img class="big" style="max-width: 90%;" src="assets/images/about/Tea About/about-img-1.webp"
                                 alt="img">
                             <img class="small position-absolute" src="assets/images/about/about-img-2-2.png" alt="img">
                         </div>
@@ -403,7 +403,7 @@
         <!-- best-coffe section start -->
         <div class="best-coffe__area position-relative">
             <div class="best-coffe__bg">
-                <img src="assets/images/about-tea/joanna-kosinska-B43a-FPxYqU-unsplash.jpg" alt="">
+                <img src="assets/images/about-tea/joanna-kosinska-B43a-FPxYqU-unsplash.webp" alt="">
             </div>
             <div class="container">
                 <div class="row justify-content-end">
