--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                     <div class="col-xl-5 col-lg-7">
                         <div class="about__left about__left--2 position-relative">
                             <img class="big" style="max-width: 100%;"
-                                src="assets/images/about/Tea About/about-img-1.png" alt="img">
+                                src="assets/images/about/Tea About/about-img-1.webp" alt="img">
                             <!-- <img class="small position-absolute" src="assets/images/about/about-img-2-2.png" alt="img"> -->
                         </div>
                     </div>
@@ -480,7 +480,7 @@
                     <div class="col-xl-4 col-lg-6 col-md-6 grid-item cat1 mt-30">
                         <div class="popular-menu__item">
                             <div class="popular-menu__thumb">
-                                <img src="assets/images/Ice Cream/wp7503609-rolled-ice-cream-wallpapers.jpg" alt="">
+                                <img src="assets/images/Ice Cream/wp7503609-rolled-ice-cream-wallpapers.webp" alt="">
                             </div>
 
                             <div class="popular-menu__content text-center">
@@ -497,7 +497,7 @@
                     <div class="col-xl-4 col-lg-6 col-md-6 grid-item cat1 mt-30">
                         <div class="popular-menu__item">
                             <div class="popular-menu__thumb">
-                                <img src="assets/images/Ice Cream/softy-2.jpg" alt="">
+                                <img src="assets/images/Ice Cream/softy-2.webp" alt="">
                             </div>
 
                             <div class="popular-menu__content text-center">
@@ -514,7 +514,7 @@
                     <div class="col-xl-4 col-lg-6 col-md-6 grid-item cat1 mt-30">
                         <div class="popular-menu__item">
                             <div class="popular-menu__thumb">
-                                <img src="assets/images/Ice Cream/fried-ice-cream-2.jpg" alt="">
+                                <img src="assets/images/Ice Cream/fried-ice-cream-2.webp" alt="">
                             </div>
 
                             <div class="popular-menu__content text-center">
@@ -531,7 +531,7 @@
                     <div class="col-xl-4 col-lg-6 col-md-6 grid-item cat1 mt-30">
                         <div class="popular-menu__item">
                             <div class="popular-menu__thumb">
-                                <img src="assets/images/Ice Cream/the-special-roller-kulfi.jpg" alt="">
+                                <img src="assets/images/Ice Cream/the-special-roller-kulfi.webp" alt="">
                             </div>
 
                             <div class="popular-menu__content text-center">
@@ -551,7 +551,7 @@
                     <div class="col-xl-4 col-lg-6 col-md-6 grid-item cat2 mt-30">
                         <div class="popular-menu__item">
                             <div class="popular-menu__thumb">
-                                <img src="assets/images/Snacks/popcorn.jpg" alt="">
+                                <img src="assets/images/Snacks/popcorn.webp" alt="">
                             </div>
                             <div class="popular-menu__content text-center">
                                 <h2 class="title">
@@ -567,7 +567,7 @@
                     <div class="col-xl-4 col-lg-6 col-md-6 grid-item cat2 mt-30">
                         <div class="popular-menu__item">
                             <div class="popular-menu__thumb">
-                                <img src="assets/images/Snacks/cotton-candy-3.jpg" alt="">
+                                <img src="assets/images/Snacks/cotton-candy-3.webp" alt="">
                             </div>
 
                             <div class="popular-menu__content text-center">
@@ -584,7 +584,7 @@
                     <div class="col-xl-4 col-lg-6 col-md-6 grid-item cat2 mt-30">
                         <div class="popular-menu__item">
                             <div class="popular-menu__thumb">
-                                <img src="assets/images/Snacks/chocolate-fountain.jpg" alt="">
+                                <img src="assets/images/Snacks/chocolate-fountain.webp" alt="">
                             </div>
                             <div class="popular-menu__content text-center">
                                 <h2 class="title">
@@ -602,7 +602,7 @@
                     <div class="col-xl-4 col-lg-6 col-md-6 grid-item cat3 mt-30">
                         <div class="popular-menu__item">
                             <div class="popular-menu__thumb">
-                                <img src="assets/images/Tea/makaibari.jpg" alt="">
+                                <img src="assets/images/Tea/makaibari.webp" alt="">
                             </div>
                             <div class="popular-menu__content text-center">
                                 <h2 class="title">
@@ -616,7 +616,7 @@
                     <div class="col-xl-4 col-lg-6 col-md-6 grid-item cat3 mt-30">
                         <div class="popular-menu__item">
                             <div class="popular-menu__thumb">
-                                <img src="assets/images/Tea/golden-emporer.jpg" alt="">
+                                <img src="assets/images/Tea/golden-emporer.webp" alt="">
                             </div>
                             <div class="popular-menu__content text-center">
                                 <h2 class="title">
@@ -629,7 +629,7 @@
                     <div class="col-xl-4 col-lg-6 col-md-6 grid-item cat3 mt-30">
                         <div class="popular-menu__item">
                             <div class="popular-menu__thumb">
-                                <img src="assets/images/Tea/coconut-tea.jpg" alt="">
+                                <img src="assets/images/Tea/coconut.webp" alt="">
                             </div>
                             <div class="popular-menu__content text-center">
                                 <h2 class="title">
@@ -642,7 +642,7 @@
                     <div class="col-xl-4 col-lg-6 col-md-6 grid-item cat3 mt-30">
                         <div class="popular-menu__item">
                             <div class="popular-menu__thumb">
-                                <img src="assets/images/Tea/Kiwi-tea.jpg" alt="">
+                                <img src="assets/images/Tea/Kiwi-tea.webp" alt="">
                             </div>
                             <div class="popular-menu__content text-center">
                                 <h2 class="title">
@@ -655,7 +655,7 @@
                     <div class="col-xl-4 col-lg-6 col-md-6 grid-item cat3 mt-30">
                         <div class="popular-menu__item">
                             <div class="popular-menu__thumb">
-                                <img src="assets/images/Tea/pepper-mint.jpg" alt="">
+                                <img src="assets/images/Tea/pepper-mint.webp" alt="">
                             </div>
                             <div class="popular-menu__content text-center">
                                 <h2 class="title">
@@ -668,7 +668,7 @@
                     <div class="col-xl-4 col-lg-6 col-md-6 grid-item cat3 mt-30">
                         <div class="popular-menu__item">
                             <div class="popular-menu__thumb">
-                                <img src="assets/images/Tea/english.jpg" alt="">
+                                <img src="assets/images/Tea/english.webp" alt="">
                             </div>
                             <div class="popular-menu__content text-center">
                                 <h2 class="title">
@@ -681,7 +681,7 @@
                     <div class="col-xl-4 col-lg-6 col-md-6 grid-item cat3 mt-30">
                         <div class="popular-menu__item">
                             <div class="popular-menu__thumb">
-                                <img src="assets/images/Tea/chocloate-mint.jpg" alt="">
+                                <img src="assets/images/Tea/chocolate-mint.webp" alt="">
                             </div>
                             <div class="popular-menu__content text-center">
                                 <h2 class="title">
@@ -694,7 +694,7 @@
                     <div class="col-xl-4 col-lg-6 col-md-6 grid-item cat3 mt-30">
                         <div class="popular-menu__item">
                             <div class="popular-menu__thumb">
-                                <img src="assets/images/Tea/Lichi-peachg.jpg" alt="">
+                                <img src="assets/images/Tea/Lichi-peachg.webp" alt="">
                             </div>
                             <div class="popular-menu__content text-center">
                                 <h2 class="title">
@@ -707,7 +707,7 @@
                     <div class="col-xl-4 col-lg-6 col-md-6 grid-item cat3 mt-30">
                         <div class="popular-menu__item">
                             <div class="popular-menu__thumb">
-                                <img src="assets/images/Tea/Hibiscus-Tea.jpg" alt="">
+                                <img src="assets/images/Tea/Hibiscus-Tea.webp" alt="">
                             </div>
                             <div class="popular-menu__content text-center">
                                 <h2 class="title">
@@ -722,7 +722,7 @@
                     <div class="col-xl-4 col-lg-6 col-md-6 grid-item cat4 mt-30">
                         <div class="popular-menu__item">
                             <div class="popular-menu__thumb">
-                                <img src="assets/images/Fries/chicken-nuggers.jpg" alt="">
+                                <img src="assets/images/Fries/chicken-nuggers.webp" alt="">
                             </div>
                             <div class="popular-menu__content text-center">
                                 <h2 class="title">
@@ -735,7 +735,7 @@
                     <div class="col-xl-4 col-lg-6 col-md-6 grid-item cat4 mt-30">
                         <div class="popular-menu__item">
                             <div class="popular-menu__thumb">
-                                <img src="assets/images/Fries/french-fries.jpg" alt="">
+                                <img src="assets/images/Fries/french-fries.webp" alt="">
                             </div>
                             <div class="popular-menu__content text-center">
                                 <h2 class="title">
@@ -748,7 +748,7 @@
                     <div class="col-xl-4 col-lg-6 col-md-6 grid-item cat4 mt-30">
                         <div class="popular-menu__item">
                             <div class="popular-menu__thumb">
-                                <img src="assets/images/Fries/patties.jpg" alt="">
+                                <img src="assets/images/Fries/patties.webp" alt="">
                             </div>
                             <div class="popular-menu__content text-center">
                                 <h2 class="title">
@@ -761,7 +761,7 @@
                     <div class="col-xl-4 col-lg-6 col-md-6 grid-item cat4 mt-30">
                         <div class="popular-menu__item">
                             <div class="popular-menu__thumb">
-                                <img src="assets/images/Fries/garlic-potato.jpg" alt="">
+                                <img src="assets/images/Fries/garlic-potato.webp" alt="">
                             </div>
                             <div class="popular-menu__content text-center">
                                 <h2 class="title">
@@ -774,7 +774,7 @@
                     <div class="col-xl-4 col-lg-6 col-md-6 grid-item cat4 mt-30">
                         <div class="popular-menu__item">
                             <div class="popular-menu__thumb">
-                                <img src="assets/images/Fries/cheese-shots.JPG" alt="">
+                                <img src="assets/images/Fries/cheese-shots.webp" alt="">
                             </div>
                             <div class="popular-menu__content text-center">
                                 <h2 class="title">
@@ -789,7 +789,7 @@
                     <div class="col-xl-4 col-lg-6 col-md-6 grid-item cat5 mt-30">
                         <div class="popular-menu__item">
                             <div class="popular-menu__thumb">
-                                <img src="assets/images/Juices/fresh-juice.jpg" alt="">
+                                <img src="assets/images/Juices/fresh-juice.webp" alt="">
                             </div>
                             <div class="popular-menu__content text-center">
                                 <h2 class="title">
@@ -802,7 +802,7 @@
                     <div class="col-xl-4 col-lg-6 col-md-6 grid-item cat5 mt-30">
                         <div class="popular-menu__item">
                             <div class="popular-menu__thumb">
-                                <img src="assets/images/Juices/shakes.jpg" alt="">
+                                <img src="assets/images/Juices/shakes.webp" alt="">
                             </div>
                             <div class="popular-menu__content text-center">
                                 <h2 class="title">
@@ -815,7 +815,7 @@
                     <div class="col-xl-4 col-lg-6 col-md-6 grid-item cat5 mt-30">
                         <div class="popular-menu__item">
                             <div class="popular-menu__thumb">
-                                <img src="assets/images/Juices/mocktails.jpg" alt="">
+                                <img src="assets/images/Juices/mocktails.webp" alt="">
                             </div>
                             <div class="popular-menu__content text-center">
                                 <h2 class="title">
@@ -828,7 +828,7 @@
                     <div class="col-xl-4 col-lg-6 col-md-6 grid-item cat5 mt-30">
                         <div class="popular-menu__item">
                             <div class="popular-menu__thumb">
-                                <img src="assets/images/Juices/lassi.jpg" alt="">
+                                <img src="assets/images/Juices/lassi.webp" alt="">
                             </div>
                             <div class="popular-menu__content text-center">
                                 <h2 class="title">
@@ -938,7 +938,7 @@
                     <div class="col-xl-3 col-lg-6 col-md-6 mt-30">
                         <div class="topgrade__item topgrade__item--2 text-center">
                             <div class="thumb">
-                                <img src="assets/images/Grades/tea-leaf.jpg" alt="">
+                                <img src="assets/images/Grades/tea-leaf.webp" alt="">
 
                             </div>
                             <div class="content mt-20">
@@ -950,7 +950,7 @@
                     <div class="col-xl-3 col-lg-6 col-md-6 mt-85">
                         <div class="topgrade__item topgrade__item--2 text-center">
                             <div class="thumb">
-                                <img src="assets/images/Grades/fry.jpg" alt="">
+                                <img src="assets/images/Grades/fry.webp" alt="">
 
                             </div>
                             <div class="content mt-20">
@@ -962,7 +962,7 @@
                     <div class="col-xl-3 col-lg-6 col-md-6 mt-30">
                         <div class="topgrade__item topgrade__item--2 text-center">
                             <div class="thumb">
-                                <img src="assets/images/Grades/fruits.jpg" alt="">
+                                <img src="assets/images/Grades/fruits.webp" alt="">
                             </div>
                             <div class="content mt-20">
                                 <h2 class="title">Fresh Fruits</h2>
@@ -974,7 +974,7 @@
                     <div class="col-xl-3 col-lg-6 col-md-6 mt-85">
                         <div class="topgrade__item topgrade__item--2 text-center">
                             <div class="thumb">
-                                <img src="assets/images/Grades/Chocolate.jpg" alt="">
+                                <img src="assets/images/Grades/Chocolate.webp" alt="">
 
                             </div>
                             <div class="content mt-20">
